# cqrs-es-example

./: README.md  docker-compose.yml  lefthook.yml
kubernetes/: namespace.yml  read-api-server.yml  read-model-data-store.yml  read-model-updater.yml  write-api-server.yml  write-model-data-store.yml
mobile-app/: next.config.ts  package-lock.json  package.json
read-api-server/: .gitignore  Dockerfile  README.md  package.json
read-model-updater/: .gitignore  Dockerfile.lambda  Dockerfile.observer  README.md  main.py  requirements.txt  samconfig.toml  template.yaml
read-model-updater/rust_app/: Cargo.toml
read-model-updater/rust_app/src/: application_services.rs  daos.rs  handlers.rs  main.rs
read-model-updater/rust_app/src/application_services/: reservations.rs  table_managements.rs
read-model-updater/rust_app/src/application_services/reservations/: reservation_cancel_service.rs  reservation_make_service.rs
read-model-updater/rust_app/src/application_services/table_managements/: reservation_confirm_service.rs
read-model-updater/rust_app/src/daos/: reservation.rs  table.rs
read-model-updater/rust_app/src/deserializers/: deserializer.rs
read-model-updater/rust_app/src/event_deserializers/: deserializer.rs
read-model-updater/rust_app/src/handlers/: event_handler.rs  reservations.rs  table_managements.rs
read-model-updater/rust_app/src/handlers/reservations/: reservation_cancelled_handler.rs  reservation_confirmed_handler.rs
read-model-updater/rust_app/src/handlers/table_managements/: reservation_confirmed_handler.rs
web-frontend/: README.md  (+4 more)
(+75 files in other folders)
