[package]
name = "read-model-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "mysql" ] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
